<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    
    <Button android:id="@+id/volver3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"/>

	<LinearLayout 
	    android:id="@+id/botones"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <Button 
	        android:id="@+id/todo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/todo"/>
	    <Button 
	        android:id="@+id/nada"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nada"/>
	    <Button 
	        android:id="@+id/borrar3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/borrar"/>
	</LinearLayout>
    
     <ListView 
        android:id="@+id/listcheck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false" />

</LinearLayout>
